update with exercises

--- a/6-statistics/1-frequentist-stat.ipynb
+++ b/6-statistics/1-frequentist-stat.ipynb
@@ -1262,6 +1262,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "968b7bb9",
+   "metadata": {},
+   "source": [
+    "**Exercises**\n",
+    "\n",
+    "1. You clean and jerk 100kg in a weightlifting competition. The mean C&J weight at the competition is 100kg. What's your z-score for the C&J?\n",
+    "2. You snatch 100kg in the same competition. The mean snatch weight is 80kg with a standard deviation of 10kg. What's your z-score for the snatch?\n",
+    "3. In olympic weightlifting, your overall score is the sum total of your C&J and snatch weights. The mean of these totals across competitors is 180kg with a standard deviation of 5kg. What's your overall z-score in the competition?\n",
+    "\n",
+    "**Spoiler alert**: Solutions below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2b53b55",
+   "metadata": {},
+   "source": [
+    "Solution 1:\n",
+    "\n",
+    "$$x_i = 100 \\text{ my score in clean and jerk competition}$$\n",
+    "$$\\mu = 100 \\text{ average score}$$\n",
+    "$$\\sigma \\text{ is not provided}$$\n",
+    "\n",
+    "$$\\text{So, here is the z-score formula} => z = \\frac{x_i - \\mu}{\\sigma} => z = \\frac{100 - 100}{\\sigma} => 0$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34403b9c",
+   "metadata": {},
+   "source": [
+    "Solution 2:\n",
+    "\n",
+    "$$x_i = 100 \\text{, your score in snatch competition}$$\n",
+    "$$\\mu = 80 \\text{, average score}$$\n",
+    "$$\\sigma = 10 \\text{, standard deviation}$$\n",
+    "\n",
+    "$$\\text{So, here is the z-score formula} => z = \\frac{x_i - \\mu}{\\sigma} => z = \\frac {100 - 80}{10} => 2$$\n",
+    "$$\\text{So, you are currently two standard deviation above the mean score for snatch competition}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07de39ee",
+   "metadata": {},
+   "source": [
+    "Solution 3:\n",
+    "\n",
+    "$$x_i = 200 \\text{, your score in snatch competition}$$\n",
+    "$$\\mu = 180 \\text{, average score}$$\n",
+    "$$\\sigma = 2 \\text{, standard deviation}$$\n",
+    "\n",
+    "$$\\text{So, here is the z-score formula} => z = \\frac{x_i - \\mu}{\\sigma} => z = \\frac {200 - 180}{5} => 4$$\n",
+    "$$\\text{So, you are currently two standard deviation above the mean score in the overall weighlifting competition}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "76dd3b79",
