--- a/6-statistics/3-confidence-intervals.ipynb
+++ b/6-statistics/3-confidence-intervals.ipynb
@@ -359,9 +359,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e771ad48",
+   "metadata": {},
+   "source": [
+    "## Analysis of variance (ANOVA)\n",
+    "\n",
+    "**Analysis of variance** (ANOVA) enables us to compare more than two samples (e.g., all three islands in the case of penguin weight) in a single statistical test.\n",
+    "\n",
+    "To apply ANOVA, we must make three assumptions:\n",
+    "1. Independent samples\n",
+    "2. Normally-distributed populations\n",
+    "3. *Homoscedasticity*: Population standard deviations are equal\n",
+    "\n",
+    "While not especially complicated under the hood (you can dig into the formulae [here](https://en.wikipedia.org/wiki/Analysis_of_variance#Logic)), ANOVA might be the least widely-applicable topic within *Intro to Stats* to ML so in the interest of time, we'll skip straight to the Python code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "204c6c29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=np.float64(0.22627752438542714), pvalue=np.float64(0.7980777848719299))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.f_oneway(t, b, d)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204c6c29",
+   "id": "2077e469",
    "metadata": {},
    "outputs": [],
    "source": []
