--- a/6-statistics/6-bayesian-stat.ipynb
+++ b/6-statistics/6-bayesian-stat.ipynb
@@ -124,6 +124,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0cda555",
+   "metadata": {},
+   "source": [
+    "It would require several hours to describe Bayesian inference beyond Bayes' theorem, but here are \"getting started\" pages for each of the primary Python libraries, ordered roughly from most lightweight (easier to pick up) to most involved:\n",
+    "\n",
+    "* [NumPyro](https://num.pyro.ai/en/latest/getting_started.html)\n",
+    "* [PyMC](https://www.pymc.io/projects/docs/en/stable/learn.html)\n",
+    "* [PyStan](https://pystan.readthedocs.io/en/latest/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "69703de5",
